--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1637,6 +1637,9 @@ components:
           items:
             type: object
             properties:
+              id:
+                type: integer
+                format: int64
               role:
                 type: string
               category:
@@ -1649,6 +1652,9 @@ components:
           items:
             type: object
             properties:
+              id:
+                type: integer
+                format: int64
               code:
                 type: string
               level:
@@ -1767,6 +1773,9 @@ components:
     certificate:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         code:
           type: string
         comments:
@@ -1789,6 +1798,9 @@ components:
     assignment:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         role:
           type: string
         initDate:
@@ -1854,7 +1866,7 @@ components:
               peopleCode:
                 type: integer
                 format: int64
-              position:
+              charge:
                 type: string
                 enum:
                   - DIRECTOR
