--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,12 +17,17 @@ build:
   - echo "Building ended"
   artifacts:
     paths:
-    - target/*.jar
+    - target
 
 test:
   stage: test
   tags:
     - maven
+  dependencies:
+    - build
+  artifacts:
+    paths:
+    - target
   script:
   - echo "Testing..."
   - mvn $MAVEN_REMOTE_OPTS test
@@ -32,18 +37,22 @@ package:
   stage: package
   tags:
     - maven
+  dependencies:
+    - test
+  artifacts:
+    paths:
+    - target
   script:
   - echo "Packaging..."
   - mvn $MAVEN_REMOTE_OPTS package -DskipTests
   - echo "Packaging ended"
-  artifacts:
-    paths:
-    - target/*.jar
 
 docker:
   stage: docker
   tags:
     -  maven
+  dependencies:
+    - package
   script:
   - echo "Packaging..."
   - mvn $MAVEN_REMOTE_OPTS spring-boot:build-image -DskipTests
