--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,11 +50,9 @@ package:
 docker:
   stage: docker
   tags:
-    -  maven
+    -  docker
   dependencies:
     - package
-  variables:
-    DOCKER_HOST: tcp://192.168.252.88:2376
   script:
   - echo "Packaging..."
   - mvn $MAVEN_REMOTE_OPTS spring-boot:build-image -DskipTests
