--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,5 +57,5 @@ docker:
     DOCKER_HOST: tcp://192.168.252.88:2375
   script:
   - echo "Building start"
-  - mvn $MAVEN_REMOTE_OPTS spring-boot:build-image -DskipTests -Ddocker.publishRegistry.url=192.168.252.88 -Dspring-boot.build-image.publish=true -Dspring-boot.build-image.imageName=192.168.252.88/library/ubikservice:v1
+  - mvn $MAVEN_REMOTE_OPTS spring-boot:build-image -DskipTests -Ddocker.publishRegistry.url=192.168.252.88:5443 -Dspring-boot.build-image.publish=true -Dspring-boot.build-image.imageName=192.168.252.88:5443/library/ubikservice:v1
   - echo "Building end"   
