--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,20 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sngular</groupId>
-	<artifactId>skilltree</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>ubikservice</artifactId>
+	<version>1.0.0</version>
 	<name>SkillTree</name>
 	<description>SkillTree Gateway for Sngular Skills Management</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>20</java.version>
 		<spring-cloud.version>2022.0.2</spring-cloud.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
