--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,12 +50,14 @@ package:
 docker:
   stage: docker
   tags:
-  - maven
+  - docker
   dependencies:
   - package
   variables:
     DOCKER_HOST: tcp://192.168.252.88:2375
   script:
   - echo "Building start"
-  - mvn $MAVEN_REMOTE_OPTS spring-boot:build-image -DskipTests -Ddocker.publishRegistry.url=192.168.252.88 -Ddocker.publishRegistry.username=$DOCKER_REGISTRY_USERNAME -Ddocker.publishRegistry.password=$DOCKER_REGISTRY_PASSWD -Dspring-boot.build-image.publish=true -Dspring-boot.build-image.imageName=192.168.252.88/library/ubikservice:v1
+  - docker login 192.168.252.88 --username $DOCKER_REGISTRY_USERNAME --password $DOCKER_REGISTRY_PASSWD
+  - docker build -f infra/Dockerfile --tag=ubikservice:latest
+  - docker push ubikservice:latest
   - echo "Building end"   
