--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,13 @@ docker:
   - package
   variables:
     DOCKER_HOST: tcp://192.168.252.88:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+
+  services:
+        - name: docker:20.10.23-dind
+          alias: docker
+
   script:
   - echo "Building start"
   - docker login 192.168.252.88 --username $DOCKER_REGISTRY_USERNAME --password $DOCKER_REGISTRY_PASSWD
