--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,13 +55,9 @@ docker:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
 
-  services:
-        - name: docker:20.10.23-dind
-          alias: docker
-
   script:
   - echo "Building start"
-  - docker login "192.168.252.88" -u "$DOCKER_REGISTRY_USERNAME" -p "$DOCKER_REGISTRY_PASSWD" 
+  - echo "${DOCKER_REGISTRY_PASSWD:?}" | docker login "192.168.252.88" --password-stdin -u "${DOCKER_REGISTRY_USERNAME:?}" 
   - docker build -f infra/Dockerfile --tag=ubikservice:latest
   - docker push ubikservice:latest
   - echo "Building end"   
