--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,11 @@ docker:
     GIT_STRATEGY: none
     DOCKER_HOST: tcp://192.168.252.88:2375
     DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_TLS_CERTDIR: "/certs"
+  services:
+        - name: docker:20.10.23-dind
+          alias: docker
+          command: ["--insecure-registry", "192.168.252.88:5000"]
 
   script:
   - echo "Building start"
