--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ docker:
   services:
     - name: docker:20.10.23-dind
       alias: docker
-      command: ["--insecure-registry", "192.168.252.88:5000"]
+      command: ["--insecure-registry = 192.168.252.88:5000"]
 
   script:
   - echo "Building start"
