--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,4 +1,4 @@
 FROM amazoncorretto:20-alpine-jdk
 LABEL authors="ubik team"
-COPY ./target/ubikservice-1.0.0.jar ubikservice-1.0.0.jar
+COPY ./ubikservice-1.0.0.jar ubikservice-1.0.0.jar
 ENTRYPOINT ["java","-jar","/ubikservice-1.0.0.jar"]
