--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,8 @@ docker:
 
   script:
   - echo "Building start"
+  - ls target/
+  - ls .
   - docker build -t 192.168.252.88:5000/os3/ubikservice:latest ./infra
   - docker push ubikservice:latest
   - echo "Building end"   
