--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,6 @@ docker:
   script:
   - echo "Building start"
   - ls target
-  - docker build -t 192.168.252.88:5000/os3/ubikservice:latest -f ./infra/Dockerfile .
-  - docker push ubikservice:latest
+  - docker build -t 192.168.252.88:5000/os3/ubik/ubikservice:latest -f ./infra/Dockerfile .
+  - docker push 192.168.252.88:5000/os3/ubik/ubikservice:latest
   - echo "Building end"   
