--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,12 +16,17 @@ build:
 
 docker:
   stage: docker
+  image: docker:20.10.23-dind
   tags:
   - docker
   variables:
     DOCKER_HOST: tcp://192.168.252.88:2375
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
+  services:
+    - name: docker:20.10.23-dind
+      alias: docker
+      command: ["--insecure-registry", "192.168.252.88:5000"]
 
   script:
   - echo "Building start"
