--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
 - build
 - docker
+- deploy
 
 build:
   stage: build
@@ -28,8 +29,28 @@ docker:
       command: ["--insecure-registry", "192.168.252.88:5000"]
 
   script:
-  - echo "Building start"
+  - echo "Docker Image Build Start"
   - ls target
   - docker build -t 192.168.252.88:5000/os3/ubik/ubikservice:latest -f ./infra/Dockerfile .
+  - echo "Docker Image Build End"
+  - echo "Docker Image Push Start"
   - docker push 192.168.252.88:5000/os3/ubik/ubikservice:latest
-  - echo "Building end"   
+  - echo "Docker Image Push End"
+
+deploy:
+  stage: docker
+  tags:
+  - docker
+  variables:
+    DOCKER_HOST: tcp://192.168.252.7:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+  services:
+    - name: docker:20.10.23-dind
+      alias: docker
+      command: ["--insecure-registry", "192.168.252.88:5000"]
+
+  script:
+  - echo "Deploy start"
+  - docker run 192.168.252.88:5000/os3/ubik/ubikservice:latest
+  - echo "Deploy end" 
